# tauri-nextjs-template

./: .gitignore  LICENSE  components.json  drizzle.config.ts  eslint.config.mjs  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  version.json
drizzle/: 0000_chief_mandroid.sql
drizzle/meta/: 0000_snapshot.json  _journal.json
plans/: authentication.mdx  tauri-authentication.md
scripts/: generate-turso-db.py
src-tauri/: Cargo.toml  tauri.conf.json  version.json
src-tauri/src/: auth.rs  lib.rs  main.rs  tray.rs  version.rs
src/api/: env.ts
src/api/db/: connection.ts  env.ts  schema.ts
src/app/: layout.tsx  page.tsx
src/app/dashboard/: page.tsx
src/components/: Version.tsx  logo.tsx  providers.tsx  toast.tsx
src/components/_misc/: RoundedButton.tsx
src/components/dashboard/: header.tsx  main-nav.tsx  overview.tsx  user-nav.tsx
src/components/effects/: waves.tsx
src/hooks/: use-auth.ts  use-toast.ts  use-user.ts
src/schemas/: index.ts
src/shared/core/: if-tauri.tsx  if-web.tsx  index.ts
src/shared/helpers/: index.ts  noop.ts
src/shared/hooks/: use-platform.ts
src/shared/ui/: avatar.tsx  badge.tsx  button.tsx  card.tsx  dropdown-menu.tsx  form.tsx  icons.tsx  index.ts  input.tsx  label.tsx  separator.tsx  skeleton.tsx  toast.tsx  tooltip.tsx
src/styles/: globals.css
src/styles/components/: scrollbar.css  shimmer.css
src/styles/core/: util-classes.css
src/typings/: auth.ts  base.ts  git.ts  global.d.ts  oauth.ts
src/views/: index-view.tsx  login-view.tsx  register-view.tsx
(+45 files in other folders)
